Change 'Add to Cart' buttons to 'Details'

--- a/Page4.html
+++ b/Page4.html
@@ -109,14 +109,14 @@
             <img src="CURRRYY 10.png" alt="Curry Flow 10">
             <p>Stephen Curry</p>
             <p>Price: $190.00</p>
-            <button onclick="addToCart('Curry Flow 10', 190)">Add to Cart</button>
+            <button onclick="addToCart('Curry Flow 10', 190)">Details</button>
         </article>
         <article>
             <h2>UA Curry 2</h2>
             <img src="CURRY 222.png" alt="UA Curry 2">
             <p>Stephen Curry</p>
             <p>Price: $185.00</p>
-            <button onclick="addToCart('Curry 2', 185)">Add to Cart</button>
+            <button onclick="addToCart('Curry 2', 185)">Details</button>
         </article>
 
         <article style>
@@ -124,7 +124,7 @@
             <img src="CURYYYY 1111.png" alt="Curry Flow 11">
             <p>Stephen Curry</p>
             <p>Price: $200.00</p>
-            <button onclick="addToCart('Curry Flow 11', 200)">Add to Cart</button>
+            <button onclick="addToCart('Curry Flow 11', 200)">Details</button>
         </article>
     </section>
 
