--- a/Page2.html
+++ b/Page2.html
@@ -108,20 +108,20 @@
             <h2>Basketball 1</h2>
             <img src="ball (2).jpg" alt="Air Jordan 1" style="width: 100%; height: 500px; max-height: 180px;">
             <p>Shot on Sony A7 II</p>
-            <button onclick="addToCart('Air Jordan 1', 190)">Add to Cart</button>
+            <button onclick="addToCart('Air Jordan 1', 190)">Details</button>
         </article>
         <article>
             <h2>Basketball 2</h2>
             <img src="ball (4).jpg" alt="Jordan Zion 3" style="width: 100%; height: 500px; max-height: 180px;">
             <p>Shot on Sony A7 II</p>
-            <button onclick="addToCart('Jordan Zion 3', 200)">Add to Cart</button>
+            <button onclick="addToCart('Jordan Zion 3', 200)">Details</button>
         </article>
 
         <article style>
             <h2>Basketball 3</h2>
             <img src="ball (3).jpg" alt="Jordan Luka 1" style="width: 100%; height: 500px; max-height: 180px;">
             <p>Shot on Sony A7 II</p>
-            <button onclick="addToCart('Jordan Luka 1', 170)">Add to Cart</button>
+            <button onclick="addToCart('Jordan Luka 1', 170)">Details</button>
         </article>
     </section>
 
